# iot_backend

./: README.md  invokecpp.py
Common/: CommonIncludes.h
Controller/: FrameworkController.cpp  FrameworkController.hpp
Data/: a2aMap.csv  actions.csv  c2vMap.csv  properties.csv
IOTRiskAssessment/: main.cpp
Model/: Action.cpp  Action.hpp  Asset.cpp  Asset.hpp  Control.cpp  Control.hpp  Device.cpp  Device.hpp  FrameworkModel.cpp  FrameworkModel.hpp  Property.cpp  Property.hpp  Risk.cpp  Risk.hpp  Vulnerability.cpp  Vulnerability.hpp
Project/: CMakeLists.txt
R3/: CalculatedRisksFullFramework.csv
Results/: CalculatedRisksPerDomain.csv  ControlSensitivities.csv  Encryption Control Sensitivities.csv  Governance and Accountability Control Sensitivities.csv  Physical Security Control Sensitivities.csv  Supplier Security Control Sensitivities.csv  Systems Security Control Sensitivities.csv  VulnerabilitiesLikelihoodImpact.csv
Test/: TestCase.xlsx  a2aMap.csv  actions.csv  assets.csv  c2vMap.csv  controls.csv  d2vMap.csv  devices.csv  parameters.csv  properties.csv  r2cMap.csv  r2vMap.csv  risks.csv  v2aMap.csv  v2pMap.csv  vulnerabilities.csv
Utils/: MappingUtility.cpp  MappingUtility.hpp
Visualization/: DemoVisualizer.py
bckup/: assets.csv  controls.csv  input_type.json  ip.json  r2cMap.csv  risks.csv  v2aMap.csv  v2aMap_experimental.csv  v2pMap.csv
bckup/running/Data/: d2vMap.csv  devices.csv  parameters.csv  r2vMap.csv  vulnerabilities.csv
bckup/running/Results/: Communications Security Control Sensitivities.csv  (+3 more)
